--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "colyseus-mobx",
-    "version": "0.1.1",
-    "description": "a mobx view of colyseus state",
-    "repository": "git@github.com:amir-arad/colyseus-mobx.git",
-    "homepage": "https://github.com/amir-arad/colyseus-mobx",
+    "name": "colyseus-events",
+    "version": "0.0.1",
+    "description": "generate notification events from colyseus state",
+    "repository": "git@github.com:starwards/colyseus-events.git",
+    "homepage": "https://github.com/starwards/colyseus-events",
     "author": "amir-arad <greenshade@gmail.com>",
     "license": "MIT",
     "main": "./dist/index.js",
@@ -29,25 +29,27 @@
         }
     },
     "peerDependencies": {
-        "@colyseus/schema": "1.x",
-        "mobx": "5.x"
+        "@colyseus/schema": "1.x"
     },
     "devDependencies": {
-        "@colyseus/schema": "^1.0.2",
-        "@types/tape": "^4.13.0",
-        "@typescript-eslint/eslint-plugin": "^2.31.0",
-        "@typescript-eslint/parser": "^2.31.0",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.11.0",
-        "husky": "^4.2.5",
-        "json-mobx": "^0.7.0",
-        "mobx": "^5.15.4",
-        "prettier": "^2.1.2",
+        "@colyseus/schema": "^1.0.34",
+        "@types/tape": "^4.13.2",
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
+        "eslint": "^8.18.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-formatter-codeframe": "^7.32.1",
+        "eslint-plugin-no-only-tests": "^2.6.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eventemitter2": "^6.4.5",
+        "husky": "^8.0.1",
+        "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
+        "source-map-support": "^0.5.21",
         "tap-color": "^1.2.0",
         "tap-set-exit": "1.1.1",
-        "tape": "^5.0.0",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.5"
+        "tape": "^5.5.3",
+        "ts-node": "^10.8.1",
+        "typescript": "^4.7.4"
     }
 }
