--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             - run: npm test | npx tap-xunit > ~/reports/test.xml
             - run: npm run build
       - store_test_results:
-          path: ~/reports
+          path: ~/reports/test.xml
       - store_artifacts:
           path: ~/reports  
 
