--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "colyseus-events",
-    "version": "3.0.0",
+    "version": "4.0.0",
     "description": "generate notification events from colyseus state",
     "repository": "git@github.com:starwards/colyseus-events.git",
     "homepage": "https://github.com/starwards/colyseus-events",
@@ -29,13 +29,15 @@
         }
     },
     "peerDependencies": {
-        "@colyseus/schema": "2.x"
+        "@colyseus/schema": "^3.x",
+        "colyseus.js": ">=^0.15"
     },
     "devDependencies": {
-        "@colyseus/schema": "^2.0.27",
+        "@colyseus/schema": "^3.0.68",
         "@types/tape": "^4.13.2",
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
+        "colyseus.js": "^0.16.22",
         "eslint": "^8.18.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-formatter-codeframe": "^7.32.1",
@@ -50,6 +52,6 @@
         "tap-set-exit": "1.1.1",
         "tape": "^5.5.3",
         "ts-node": "^10.9.1",
-        "typescript": "^4.8.4"
+        "typescript": "^5.9.3"
     }
 }
